{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 76,
  "lineage": "2ba19911-e9bb-3d76-b36d-7bab05406c7f",
  "resources": [
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/ctrl-358804/regions/australia-southeast1/networkEndpointGroups/serverless-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-03-07T07:51:50.264-08:00",
            "enable_cdn": false,
            "fingerprint": "ks86nVuIzuc=",
            "generated_id": 2160096973647700857,
            "id": "projects/ctrl-358804/global/backendServices/elsa-data-dev-lb-backend-default",
            "load_balancing_scheme": "EXTERNAL",
            "name": "elsa-data-dev-lb-backend-default",
            "port_name": "http",
            "project": "ctrl-358804",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctrl-358804/global/backendServices/elsa-data-dev-lb-backend-default",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_cloud_run_service.elsa_data_dev",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "google_secret_manager_secret.elsa_data_dev_deployed"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.160.10.251",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-03-07T07:42:26.905-08:00",
            "id": "projects/ctrl-358804/global/addresses/elsa-data-dev-lb-address",
            "label_fingerprint": "tjR8I27v5HY=",
            "labels": {
              "example-label": "cloud-run-example"
            },
            "name": "elsa-data-dev-lb-address",
            "prefix_length": 0,
            "project": "ctrl-358804",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctrl-358804/global/addresses/elsa-data-dev-lb-address"
          }
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/ctrl-358804/global/forwardingRules/elsa-data-dev-lb",
            "ip_address": "34.160.10.251",
            "ip_protocol": "TCP",
            "label_fingerprint": "tjR8I27v5HY=",
            "labels": {
              "example-label": "cloud-run-example"
            },
            "load_balancing_scheme": "EXTERNAL",
            "name": "elsa-data-dev-lb",
            "port_range": "80",
            "project": "ctrl-358804",
            "self_link": "https://www.googleapis.com/compute/beta/projects/ctrl-358804/global/forwardingRules/elsa-data-dev-lb",
            "target": "https://www.googleapis.com/compute/v1/projects/ctrl-358804/global/targetHttpProxies/elsa-data-dev-lb-http-proxy"
          },
          "dependencies": [
            "google_cloud_run_service.elsa_data_dev",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "google_secret_manager_secret.elsa_data_dev_deployed",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_global_address.default",
            "module.lb-http.google_compute_target_http_proxy.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/ctrl-358804/global/forwardingRules/elsa-data-dev-lb-https",
            "ip_address": "34.160.10.251",
            "ip_protocol": "TCP",
            "label_fingerprint": "tjR8I27v5HY=",
            "labels": {
              "example-label": "cloud-run-example"
            },
            "load_balancing_scheme": "EXTERNAL",
            "name": "elsa-data-dev-lb-https",
            "port_range": "443",
            "project": "ctrl-358804",
            "self_link": "https://www.googleapis.com/compute/beta/projects/ctrl-358804/global/forwardingRules/elsa-data-dev-lb-https",
            "target": "https://www.googleapis.com/compute/v1/projects/ctrl-358804/global/targetHttpsProxies/elsa-data-dev-lb-https-proxy"
          },
          "dependencies": [
            "google_cloud_run_service.elsa_data_dev",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "google_secret_manager_secret.elsa_data_dev_deployed",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_global_address.default",
            "module.lb-http.google_compute_managed_ssl_certificate.default",
            "module.lb-http.google_compute_ssl_certificate.default",
            "module.lb-http.google_compute_target_https_proxy.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.random_id.certificate"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-03-07T07:52:26.587-08:00",
            "id": "projects/ctrl-358804/global/targetHttpProxies/elsa-data-dev-lb-http-proxy",
            "name": "elsa-data-dev-lb-http-proxy",
            "project": "ctrl-358804",
            "proxy_bind": false,
            "proxy_id": 2877928554478887765,
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctrl-358804/global/targetHttpProxies/elsa-data-dev-lb-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/ctrl-358804/global/urlMaps/elsa-data-dev-lb-https-redirect"
          },
          "dependencies": [
            "google_cloud_run_service.elsa_data_dev",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "google_secret_manager_secret.elsa_data_dev_deployed",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-03-07T07:52:26.580-08:00",
            "id": "projects/ctrl-358804/global/targetHttpsProxies/elsa-data-dev-lb-https-proxy",
            "name": "elsa-data-dev-lb-https-proxy",
            "project": "ctrl-358804",
            "proxy_bind": false,
            "proxy_id": 1827994374150742869,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctrl-358804/global/targetHttpsProxies/elsa-data-dev-lb-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/ctrl-358804/global/sslCertificates/elsa-data-dev-lb-cert"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/ctrl-358804/global/urlMaps/elsa-data-dev-lb-url-map"
          },
          "dependencies": [
            "google_cloud_run_service.elsa_data_dev",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "google_secret_manager_secret.elsa_data_dev_deployed",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_managed_ssl_certificate.default",
            "module.lb-http.google_compute_ssl_certificate.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.random_id.certificate"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-03-07T07:52:13.973-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/ctrl-358804/global/backendServices/elsa-data-dev-lb-backend-default",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "zmv7W-Gm_y0=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/ctrl-358804/global/urlMaps/elsa-data-dev-lb-url-map",
            "map_id": 6864543161703392066,
            "name": "elsa-data-dev-lb-url-map",
            "path_matcher": [],
            "project": "ctrl-358804",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctrl-358804/global/urlMaps/elsa-data-dev-lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_cloud_run_service.elsa_data_dev",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "google_secret_manager_secret.elsa_data_dev_deployed",
            "module.lb-http.google_compute_backend_service.default"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-03-07T07:42:26.668-08:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "4nxxxxPyYiw=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/ctrl-358804/global/urlMaps/elsa-data-dev-lb-https-redirect",
            "map_id": 4624941613484533133,
            "name": "elsa-data-dev-lb-https-redirect",
            "path_matcher": [],
            "project": "ctrl-358804",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctrl-358804/global/urlMaps/elsa-data-dev-lb-https-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}